--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </div>
         </div>
         <div class="last">
-            DevSuperior 2021 - Use like you want
+            breaking my Limits - 2022
         </div>
     </footer>
 </body>
